syntax = "proto3";

package raftpb;

// Example RequestVote RPC arguments structure.
message RequestVoteArgs {
    // Your data here (2A, 2B).
    fixed64 term = 1; 
    fixed64 candidateId = 2; 
    fixed64 lastLogIndex = 3; 
    fixed64 lastLogTerm = 4; 
}

// Example RequestVote RPC reply structure.
message RequestVoteReply {
    // Your data here (2A).
    fixed64 term = 1;
    bool voteGranted = 2;
}

message AppendEntriesArgs {
    fixed64 term = 1; 
    fixed64 leaderID = 2; 
    /*fixed64 prevLogIndex = 3; */
    /*fixed64 prevLogTerm = 4; */
    /*entries; */
    /*fixed64 leaderCommit = 6;*/
}

message AppendEntriesReply {
    fixed64 term = 1; 
    bool success = 2; 
    // fixed64 conflictIndex = 3; // optimization for diverging logs 
}
